--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-9 [中国前女记者逃离家暴 自称“另一个拉姆”](/articles/rfa/1046464.md)
+
+2-9 [加拿大国会议员连署  吁国际奥委会弃北京冬奥另觅举办地](/articles/rfa/1046465.md)
+
+2-9 [李文亮逝世一周年    官方叫停公开祭奠](/articles/rfa/1046466.md)
+
 2-9 [维护国防利益和国家安全  法国宪法委员会批准“反华为法”](/articles/rfa/1046467.md)
 
 2-9 [专访人权人士向莉：让更多人了解中国真实现状](/articles/rfa/1046468.md)
@@ -594,10 +600,4 @@
 1-7 [石家庄进入准封城  当地人如是说](/articles/rfa/1046762.md)
 
 1-7 [抓捕之后香港面临大改造？文化央企是信号](/articles/rfa/1046763.md)
-
-1-7 [香港抗争新歌《手足》的 部分制作人遭当局逮捕](/articles/rfa/1046764.md)
-
-1-7 [美再禁八款中国应用  能真正实施吗？](/articles/rfa/1046765.md)
-
-1-7 [美媒曝北京要分享蚂蚁大数据   马云能拒绝吗？](/articles/rfa/1046766.md)
 
