--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-9 [缅甸大规模示威抗议政变 军方颁布戒严令](/articles/rfi/1035034.md)
+
+2-9 [周期股领涨 欧股上扬 – 法国国际广播电台 - RFI](/articles/rfi/1035035.md)
+
 2-9 [美首位现任国会议员染疫身亡 莱特辞世 – 法国国际广播电台 - RFI](/articles/rfi/1035036.md)
 
 2-9 [弹劾案参院审理在即 特朗普律师批评是“政治戏码”](/articles/rfi/1035037.md)
@@ -596,8 +600,4 @@
 2-4 [英国逾千万人已接种首剂COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1035332.md)
 
 2-4 [前欧洲央行行长德拉基出山组阁意大利新政府 - 要闻分析](/articles/rfi/1035333.md)
-
-2-4 [法国世界报： 这次，法国没有和德国合伙 - 法国世界报](/articles/rfi/1035334.md)
-
-2-4 [CGTN: 世卫组织专家访问武汉顶级生物安全实验室](/articles/rfi/1035335.md)
 
