--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-9 [“精英俱乐部”昙花一现   中国网民渴望了解敏感话题](/articles/rfa/1046462.md)
+
+2-9 [李翘楚被拘留  丁家喜被绑老虎凳七天七夜](/articles/rfa/1046463.md)
+
 2-9 [中国前女记者逃离家暴 自称“另一个拉姆”](/articles/rfa/1046464.md)
 
 2-9 [加拿大国会议员连署  吁国际奥委会弃北京冬奥另觅举办地](/articles/rfa/1046465.md)
@@ -596,8 +600,4 @@
 1-7 [中国大肆报道美国会冲突      学者:中国人连示威的权利也没有](/articles/rfa/1046760.md)
 
 1-7 [香港大抓捕国际反应强烈    首位美国人被抓](/articles/rfa/1046761.md)
-
-1-7 [石家庄进入准封城  当地人如是说](/articles/rfa/1046762.md)
-
-1-7 [抓捕之后香港面临大改造？文化央企是信号](/articles/rfa/1046763.md)
 
