--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-9 [马克龙呼吁加速新兴经济体及发展中国家的疫苗接种](/articles/rfi/1035031.md)
+
+2-9 [联合国人权理事会将召开特别会议讨论缅甸政变后局势](/articles/rfi/1035032.md)
+
+2-9 [法国卫生部长接种阿斯利康疫苗  英国指阿斯利康疫苗对新冠病毒有效](/articles/rfi/1035033.md)
+
 2-9 [缅甸大规模示威抗议政变 军方颁布戒严令](/articles/rfi/1035034.md)
 
 2-9 [周期股领涨 欧股上扬 – 法国国际广播电台 - RFI](/articles/rfi/1035035.md)
@@ -594,10 +600,4 @@
 2-4 [台湾盖亚那设办公室 美官员表乐见 – 法国国际广播电台 - RFI](/articles/rfi/1035329.md)
 
 2-4 [疫情下未能重启学校 旧金山市告学区 – 法国国际广播电台 - RFI](/articles/rfi/1035330.md)
-
-2-4 [脸书证实旗下服务在缅甸受阻 – 法国国际广播电台 - RFI](/articles/rfi/1035331.md)
-
-2-4 [英国逾千万人已接种首剂COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1035332.md)
-
-2-4 [前欧洲央行行长德拉基出山组阁意大利新政府 - 要闻分析](/articles/rfi/1035333.md)
 
