--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-9 [缅甸民众持续上街抗议 军人统治者宣布宵禁](/articles/voa/1043102.md)
+
 2-9 [共和党众议员怀特感染新冠病毒住院两周后辞世](/articles/voa/1043103.md)
 
 2-9 [“向中国证明美国依然强大” 新任白宫国安会中国事务主任格维兹](/articles/voa/1043104.md)
@@ -598,6 +600,4 @@
 1-28 [美新任国务卿布林肯承诺合作应对全球挑战](/articles/voa/1043400.md)
 
 1-28 [知名香港活动人士袁弓夷：中共就是“有组织犯罪集团”](/articles/voa/1043401.md)
-
-1-28 [联合国50国调查显示青少年关注气候变化危机](/articles/voa/1043402.md)
 
