--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-9 [一百八十多人权组织呼吁抵制北京冬奥会  官媒扬言反制](/articles/rfa/1046460.md)
+
+2-9 [拜登说习近平无民主意识   美中能否“牛”转乾坤？](/articles/rfa/1046461.md)
+
 2-9 [“精英俱乐部”昙花一现   中国网民渴望了解敏感话题](/articles/rfa/1046462.md)
 
 2-9 [李翘楚被拘留  丁家喜被绑老虎凳七天七夜](/articles/rfa/1046463.md)
@@ -596,8 +600,4 @@
 1-7 [创史上先例！ 美国驻联合国大使将访台](/articles/rfa/1046758.md)
 
 1-7 [新版统战条例加强海内外台湾人热爱中国推进统一 台学者：裂解团结抗中](/articles/rfa/1046759.md)
-
-1-7 [中国大肆报道美国会冲突      学者:中国人连示威的权利也没有](/articles/rfa/1046760.md)
-
-1-7 [香港大抓捕国际反应强烈    首位美国人被抓](/articles/rfa/1046761.md)
 
