--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-9 [维舟 | 后路](/articles/cdt/386085.md)
+
+2-9 [IdeasInformation | 开了“两岸青年大乱聊” Clubhouse 房间之后的一些思考和学习](/articles/cdt/386086.md)
+
 2-9 [【网络民议】言论自由只存在了一周？ClubHouse在墙国被墙](/articles/cdt/386092.md)
 
 2-8 [【异闻观止】浙江嘉兴首个“劳动者维权异常名录”公布  亮剑“职场碰瓷”](/articles/cdt/386094.md)
@@ -596,8 +600,4 @@
 1-9 [人物｜考研中年人，走进付费自习室](/articles/cdt/387266.md)
 
 1-9 [德国之声 | 长平观察：马云的中国智慧](/articles/cdt/387269.md)
-
-1-9 [立场新闻 | 网站“香港编年史”无法连接 据报国安处首用国安法封网](/articles/cdt/387271.md)
-
-1-9 [红星新闻 | 放弃年终奖也要走，他们为什么想要“逃离”拼多多？](/articles/cdt/387273.md)
 
