--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-9 [特斯拉已买入15亿美元比特币](/articles/ft/1046084.md)
+
 2-8 [2021年FT全球MBA排行榜分析：“清算之年”](/articles/ft/1046085.md)
 
 2-8 [梅赛德斯：电动车利润将在10年内追上内燃机汽车](/articles/ft/1046086.md)
@@ -598,6 +600,4 @@
 1-4 [澳大利亚房价在疫情中上涨](/articles/ft/1046382.md)
 
 1-4 [人民币汇率及全球股指新年首日上涨](/articles/ft/1046383.md)
-
-1-4 [疫情下的乌云与金边：2020互联网大事盘点](/articles/ft/1046384.md)
 
