--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-9 [中国商人耿潇男将受审，曾声援许章润](/articles/nyt/1047193.md)
+
+2-9 [简报：商人耿潇男今日受审；中国连续两日无本土新增病例](/articles/nyt/1047194.md)
+
 2-8 [海航破产，中国私企的一个警示故事](/articles/nyt/1047195.md)
 
 2-8 [猫头鹰叔叔和卡通动画：香港“国安教育”进小学](/articles/nyt/1047196.md)
@@ -596,8 +600,4 @@
 12-2 [柳美里与《东京上野站》：无家可归者的挽歌](/articles/nyt/1047491.md)
 
 12-2 [北约外长会议研究如何应对中俄挑战](/articles/nyt/1047492.md)
-
-12-2 [面对中国钳制，澳大利亚的反击与求助](/articles/nyt/1047493.md)
-
-12-2 [嫦娥五号成功在月球着陆，中国太空计划更进一步](/articles/nyt/1047494.md)
 
