--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-9 [短暂的自由与关上的窗口：中国封禁Clubhouse](/articles/nyt/1047192.md)
+
 2-9 [中国商人耿潇男将受审，曾声援许章润](/articles/nyt/1047193.md)
 
 2-9 [简报：商人耿潇男今日受审；中国连续两日无本土新增病例](/articles/nyt/1047194.md)
@@ -598,6 +600,4 @@
 12-2 [想入籍美国？先学会这128道题](/articles/nyt/1047490.md)
 
 12-2 [柳美里与《东京上野站》：无家可归者的挽歌](/articles/nyt/1047491.md)
-
-12-2 [北约外长会议研究如何应对中俄挑战](/articles/nyt/1047492.md)
 
