--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-9 [欧盟拟迫使谷歌等大型科技平台为新闻付费](/articles/ft/1046080.md)
+
 2-9 [欧洲三国驱逐俄罗斯外交官](/articles/ft/1046081.md)
 
 2-9 [货币政策：“模糊”与“清晰”](/articles/ft/1046082.md)
@@ -598,6 +600,4 @@
 1-4 [英国法官拒绝将阿桑奇引渡至美国](/articles/ft/1046378.md)
 
 1-4 [金融监管的“分寸”](/articles/ft/1046379.md)
-
-1-4 [互联网反垄断的欧洲版本是怎么样的](/articles/ft/1046380.md)
 
