--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-9 [特朗普二次弹劾案：前总统能接受审判吗？](/articles/nyt/1047190.md)
+
+2-9 [是时候信任中国和俄罗斯的疫苗了](/articles/nyt/1047191.md)
+
 2-9 [短暂的自由与关上的窗口：中国封禁Clubhouse](/articles/nyt/1047192.md)
 
 2-9 [中国商人耿潇男将受审，曾声援许章润](/articles/nyt/1047193.md)
@@ -596,8 +600,4 @@
 12-2 [黄之锋因2019年抗议活动获刑13个半月](/articles/nyt/1047488.md)
 
 12-2 [逗狗意外受伤后，拜登脚戴护具亮相](/articles/nyt/1047489.md)
-
-12-2 [想入籍美国？先学会这128道题](/articles/nyt/1047490.md)
-
-12-2 [柳美里与《东京上野站》：无家可归者的挽歌](/articles/nyt/1047491.md)
 
