--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-9 [猛哥｜关于马金瑜及其它诸般](/articles/cdt/386062.md)
+
 2-9 [全现在 | 平静下的喧哗：缅甸年轻人掀起“噪音运动”，锅底盆底被敲变形](/articles/cdt/386075.md)
 
 2-9 [歪脑 | 如何在最危险的悬崖建立海中小屋：建立微信“反贼群”的年轻人们](/articles/cdt/386077.md)
@@ -598,6 +600,4 @@
 1-10 [【网络民议】川普社交账号被封，有没有违背言论自由？](/articles/cdt/387259.md)
 
 1-9 [法史天地 | 前记者张贾龙因推特言论被判刑](/articles/cdt/387260.md)
-
-1-9 [劳洞 |  悲观与行动的2020：十大工人维权行动盘点](/articles/cdt/387261.md)
 
