--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-9 [德国驱逐一名俄罗斯外交官](/articles/dw/1044001.md)
+
+2-9 [Clubhouse虽被封 人们依旧渴望言论自由](/articles/dw/1044002.md)
+
 2-9 [香港法院裁决 黎智英持续被押](/articles/dw/1044003.md)
 
 2-9 [缅甸军方承诺举办选举 美国重申与人民同在](/articles/dw/1044004.md)
@@ -596,8 +600,4 @@
 1-23 [如何更快让新冠变种“现形”？](/articles/dw/1044299.md)
 
 1-23 [澳洲酝酿新媒体法 谷歌威胁关搜索引擎](/articles/dw/1044300.md)
-
-1-22 [疫苗外交：中国慢半拍 印度手笔大](/articles/dw/1044301.md)
-
-1-22 [拜登副手哈里斯：仅仅是政治正确的选择？](/articles/dw/1044302.md)
 
