--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-9 [拜登上任后首次 美国海军双航母在南中国海演习](/articles/voa/1043082.md)
+
+2-9 [缅甸大规模示威进入第四天 警方逮捕了至少几十人](/articles/voa/1043083.md)
+
 2-9 [时和势在中国这边？专制体制就是最大的羁绊](/articles/voa/1043084.md)
 
 2-9 [香港终审法院引用国安法裁定黎智英不得保释](/articles/voa/1043085.md)
@@ -596,8 +600,4 @@
 1-29 [时事大家谈: 拜登政府如何重新定义美中经贸关系？](/articles/voa/1043380.md)
 
 1-29 [香港各界关注特首林郑月娥首次视像述职 评论指北京对港政策愈趋严厉](/articles/voa/1043381.md)
-
-1-29 [藏语言权利倡导者扎西文色据报刑满获释](/articles/voa/1043382.md)
-
-1-29 [中国政府负债率继续走高 今年经济增速料将放缓](/articles/voa/1043383.md)
 
