--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-9 [法院裁定国安法下保释更严   黎智英须继续还柙待审](/articles/rfa/1046459.md)
+
 2-9 [一百八十多人权组织呼吁抵制北京冬奥会  官媒扬言反制](/articles/rfa/1046460.md)
 
 2-9 [拜登说习近平无民主意识   美中能否“牛”转乾坤？](/articles/rfa/1046461.md)
@@ -598,6 +600,4 @@
 1-7 [疫情卷土重来  中国各地倡议原地过年](/articles/rfa/1046757.md)
 
 1-7 [创史上先例！ 美国驻联合国大使将访台](/articles/rfa/1046758.md)
-
-1-7 [新版统战条例加强海内外台湾人热爱中国推进统一 台学者：裂解团结抗中](/articles/rfa/1046759.md)
 
