--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 2-9 [顺水推舟 | 李文亮在烈士陵园名录中被遮盖惹众怒](/articles/cdt/386079.md)
 
+2-9 [【CDT敏感词周报】第十一期：人人影视字幕组、新疆大规模性侵、Clubhouse](/articles/cdt/386083.md)
+
 2-9 [维舟 | 后路](/articles/cdt/386085.md)
 
 2-9 [IdeasInformation | 开了“两岸青年大乱聊” Clubhouse 房间之后的一些思考和学习](/articles/cdt/386086.md)
@@ -598,6 +600,4 @@
 1-10 [剥洋葱people | 4个月宝宝疑抹抑菌霜变“大头娃娃”，母婴店“爆款”背后隐患重重](/articles/cdt/387251.md)
 
 1-10 [【网络民议】川普社交账号被封，有没有违背言论自由？](/articles/cdt/387259.md)
-
-1-9 [法史天地 | 前记者张贾龙因推特言论被判刑](/articles/cdt/387260.md)
 
