--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-9 [【立此存照】胡锡进：完全不受控的互联网言论平台在今天中国不可能出现](/articles/cdt/386055.md)
+
+2-9 [【旧文重温】Matters｜黄章晋：再见，伊力哈木](/articles/cdt/386056.md)
+
 2-9 [猛哥｜关于马金瑜及其它诸般](/articles/cdt/386062.md)
 
 2-9 [全现在 | 平静下的喧哗：缅甸年轻人掀起“噪音运动”，锅底盆底被敲变形](/articles/cdt/386075.md)
@@ -596,8 +600,4 @@
 1-10 [李翘楚：漩涡里的人，有责任说出漩涡的样子](/articles/cdt/387239.md)
 
 1-10 [人间思想笔记 | 人类去火星之后，还有2000块一条命的外卖员吗](/articles/cdt/387245.md)
-
-1-10 [剥洋葱people | 4个月宝宝疑抹抑菌霜变“大头娃娃”，母婴店“爆款”背后隐患重重](/articles/cdt/387251.md)
-
-1-10 [【网络民议】川普社交账号被封，有没有违背言论自由？](/articles/cdt/387259.md)
 
