--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-9 [疫情之下 中共缘何不发直接救济给民众？](/articles/voa/1043081.md)
+
 2-9 [拜登上任后首次 美国海军双航母在南中国海演习](/articles/voa/1043082.md)
 
 2-9 [缅甸大规模示威进入第四天 警方逮捕了至少几十人](/articles/voa/1043083.md)
@@ -598,6 +600,4 @@
 1-29 [布林肯与欧盟外交主管通话 谋求修复美欧关系并协调对华立场](/articles/voa/1043379.md)
 
 1-29 [时事大家谈: 拜登政府如何重新定义美中经贸关系？](/articles/voa/1043380.md)
-
-1-29 [香港各界关注特首林郑月娥首次视像述职 评论指北京对港政策愈趋严厉](/articles/voa/1043381.md)
 
