--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+2-9 [布林肯：特朗普对华采取更强硬的态度是正确的](/articles/rfi/1035004.md)
+
+2-9 [日防卫大臣向美国表示不接受中国海警法](/articles/rfi/1035005.md)
+
+2-9 [拜登上台后 美海军首度双航母南海军演](/articles/rfi/1035006.md)
+
+2-9 [美印领导人通话：重申确保自由开放的印太地区承诺](/articles/rfi/1035007.md)
+
+2-9 [菲律宾防长：中国新海警法引发南海误判风险](/articles/rfi/1035008.md)
+
+2-9 [亚洲股市走势分歧 投资人依然乐观 – 法国国际广播电台 - RFI](/articles/rfi/1035009.md)
+
 2-9 [连两战延长分高下  湖人力克雷霆夺5连胜 – 法国国际广播电台 - RFI](/articles/rfi/1035010.md)
 
 2-9 [菅义伟表示对中国实行《海警法》强烈关切](/articles/rfi/1035011.md)
@@ -588,16 +600,4 @@
 2-4 [未听“碰不得说”？美国三艘航母同时现身印太](/articles/rfi/1035302.md)
 
 2-4 [中国最高法：对严重危害国安等境外疑犯可缺席审判 充公财产 剑指谁？](/articles/rfi/1035303.md)
-
-2-4 [法国新冠病毒确诊案例 英国变种占14％](/articles/rfi/1035304.md)
-
-2-4 [投资人稍作喘息 亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1035305.md)
-
-2-4 [半导体短缺 美国通用汽车3厂停产1厂产能减半 – 法国国际广播电台 - RFI](/articles/rfi/1035306.md)
-
-2-4 [企业重组改造多年 西门子新执行长出炉 – 法国国际广播电台 - RFI](/articles/rfi/1035307.md)
-
-2-4 [亚马逊：杰夫·贝索斯意外退居二线的原因 - 今日经济](/articles/rfi/1035308.md)
-
-2-4 [香港民主排名急跌12位至尾二类别 与缅甸成区内最大跌幅政权](/articles/rfi/1035309.md)
 
