--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-9 [一年来首次出镜 任正非：信心更大](/articles/dw/1043996.md)
+
 2-9 [去年中国生育率大幅下降](/articles/dw/1043997.md)
 
 2-9 [疫情重创：德国出口呈11年来最大降幅](/articles/dw/1043998.md)
@@ -598,6 +600,4 @@
 1-23 [德智库呼吁美欧重启贸协谈判 共同应对中国](/articles/dw/1044294.md)
 
 1-23 [参加TikTok窒息挑战 意大利10岁女童身亡](/articles/dw/1044295.md)
-
-1-23 [政治落魄 特朗普商业品牌亦受重创](/articles/dw/1044296.md)
 
