--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-10 [笨妈育儿育己 | 马金瑜事件旁观者：去解决施暴者，而不是受害者](/articles/cdt/386049.md)
+
 2-9 [耿潇男：我以自由为人生的标配](/articles/cdt/386051.md)
 
 2-9 [【立此存照】胡锡进：完全不受控的互联网言论平台在今天中国不可能出现](/articles/cdt/386055.md)
@@ -598,6 +600,4 @@
 1-10 [德国之声 | 专访：历史是 “中国最重要的心理工具”](/articles/cdt/387231.md)
 
 1-10 [【CDT连载】巴奴的救赎（21）](/articles/cdt/387237.md)
-
-1-10 [李翘楚：漩涡里的人，有责任说出漩涡的样子](/articles/cdt/387239.md)
 
