--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-10 [世卫武汉调查结束 基本排除实验室泄露可能性](/articles/voa/1043075.md)
+
 2-9 [中国外商投资安全审查办法上路 专家：顾了面子却吓跑外资](/articles/voa/1043076.md)
 
 2-9 [人权组织谴责针对藏人的强迫劳动政策](/articles/voa/1043077.md)
@@ -598,6 +600,4 @@
 1-29 [联合国秘书长敦促美中“重启“关系](/articles/voa/1043373.md)
 
 1-29 [美国部分地区放松防疫限制](/articles/voa/1043374.md)
-
-1-29 [美菲外长通话: 共防条约适用南中国海](/articles/voa/1043375.md)
 
