--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-10 [黎智英国安法勾结罪保释案 终审法院判律政司上诉得直需继续还柙](/articles/voa/1043072.md)
+
+2-10 [博雷利提醒王毅欧美关系牢固，中方通报对此只字未提](/articles/voa/1043073.md)
+
 2-10 [2020年中国新生儿数量下降15% 人口老龄化加快 计划生育后果显现](/articles/voa/1043074.md)
 
 2-10 [世卫武汉调查结束 基本排除实验室泄露可能性](/articles/voa/1043075.md)
@@ -596,8 +600,4 @@
 1-29 [透明国际公布全球腐败感知指数，称腐败让民主倒退](/articles/voa/1043370.md)
 
 1-29 [联合国：2020年为世界旅游史上最糟糕一年](/articles/voa/1043371.md)
-
-1-29 [VOA连线(文灏): 拜登签署行政令 扩大医保覆盖范围](/articles/voa/1043372.md)
-
-1-29 [联合国秘书长敦促美中“重启“关系](/articles/voa/1043373.md)
 
