--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-10 [泼墨女孩董瑶琼第三度入精神病院](/articles/rfa/1046453.md)
+
+2-10 [法国军舰巡弋南海，中国反对以航行自由之名危害主权](/articles/rfa/1046454.md)
+
 2-9 [蔡英文春节前讲话再提两岸“对等”接触](/articles/rfa/1046455.md)
 
 2-9 [首宗国安法案不设陪审团   打破成立176年陪审团制度](/articles/rfa/1046456.md)
@@ -596,8 +600,4 @@
 1-8 [美、港冲击立法机构事件有可比性吗？](/articles/rfa/1046751.md)
 
 1-8 [美国会确认大选结果   民主制度坚如磐石](/articles/rfa/1046752.md)
-
-1-8 [《十年》导演欧文杰：香港变调来得太快](/articles/rfa/1046753.md)
-
-1-8 [欧中投资协定间接促成香港大抓捕行动？  彭定康呼吁取消](/articles/rfa/1046754.md)
 
