--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-10 [世卫组织报告称病毒极不可能由实验室泄露 白宫表示将审视相关结论及数据](/articles/voa/1043070.md)
+
+2-10 [时事大家谈: 李文亮去世一周年，网络祭奠的悲与不舍](/articles/voa/1043071.md)
+
 2-10 [黎智英国安法勾结罪保释案 终审法院判律政司上诉得直需继续还柙](/articles/voa/1043072.md)
 
 2-10 [博雷利提醒王毅欧美关系牢固，中方通报对此只字未提](/articles/voa/1043073.md)
@@ -596,8 +600,4 @@
 1-29 [北京想给拜登来个下马威，却挨了一拳](/articles/voa/1043368.md)
 
 1-29 [美国发现新冠病毒南非变种](/articles/voa/1043369.md)
-
-1-29 [透明国际公布全球腐败感知指数，称腐败让民主倒退](/articles/voa/1043370.md)
-
-1-29 [联合国：2020年为世界旅游史上最糟糕一年](/articles/voa/1043371.md)
 
