--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-10 [巴黎环城公路：法兰西大区居民反对巴黎市长的项目 - 法国风土人情](/articles/rfi/1034988.md)
+
 2-10 [投资人观望 欧股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1034989.md)
 
 2-10 [习近平主持中东欧“17+1” 峰会 布林肯强调与中欧四国盟友关系](/articles/rfi/1034990.md)
@@ -598,6 +600,4 @@
 2-4 [缅甸政变后 年轻世代既想反抗又担心镇压 – 法国国际广播电台 - RFI](/articles/rfi/1035286.md)
 
 2-4 [英国下架在英中国环球电视网 北京怒拿BBC开刀](/articles/rfi/1035287.md)
-
-2-4 [法国观光旅游滑雪胜地巴隆.阿尔萨斯 - 法国风光](/articles/rfi/1035288.md)
 
