--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-10 [缅甸警方镇压抗议人士](/articles/voa/1043061.md)
+
+2-10 [民主党与共和党针对弹劾案的策略](/articles/voa/1043062.md)
+
+2-10 [联友制中 拜登的战略能否成功？](/articles/voa/1043063.md)
+
+2-10 [华为再提讼 挑战特朗普政府对其的国安威胁认定](/articles/voa/1043064.md)
+
 2-10 [分析：美中紧张关系恐持续 台湾可能成为“世界上最危险的引爆点”](/articles/voa/1043065.md)
 
 2-10 [德国检察官指控百岁老人纳粹时期犯下战争罪](/articles/voa/1043066.md)
@@ -592,12 +600,4 @@
 1-29 [郭飞雄赴美机场遭拦截失联 支持者吁国际社会救援](/articles/voa/1043359.md)
 
 1-29 [拜登的贸易代表可望与中国强硬竞争](/articles/voa/1043360.md)
-
-1-29 [台湾公民及人权团体：中国政府停止迫害郭飞雄 让其与家人团聚](/articles/voa/1043361.md)
-
-1-29 [后默克尔时代的德国会对中国更加强硬吗？](/articles/voa/1043362.md)
-
-1-29 [习近平时代“卖火柴的小女孩”，墨茶之死如何被改写](/articles/voa/1043363.md)
-
-1-29 [美国史上第一位第二先生创纪录](/articles/voa/1043364.md)
 
