--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-10 [美参议院经过表决将弹劾审判继续下去](/articles/voa/1043055.md)
+
+2-10 [美国将仔细审视世卫组织新冠病毒溯源的调查报告](/articles/voa/1043056.md)
+
+2-10 [白宫要义: 白宫: 派美国专家团到中国查新冠病毒起源“势在必行”](/articles/voa/1043057.md)
+
 2-10 [白宫拉开拜登与特朗普弹劾审判之间的距离](/articles/voa/1043058.md)
 
 2-10 [新冠疫苗接种继续在美国推进](/articles/voa/1043059.md)
@@ -594,10 +600,4 @@
 1-29 [长臂制港 中共向香港增派人手](/articles/voa/1043353.md)
 
 1-29 [巨贪伏法 习近平反腐打死又一只大老虎](/articles/voa/1043354.md)
-
-1-29 [世卫专家开始武汉实地调查，北京坚称“是合作而不是调查”](/articles/voa/1043355.md)
-
-1-29 [台湾GDP增速30年来首次超过中国](/articles/voa/1043356.md)
-
-1-29 [许志永丁家喜证实遭受酷刑 家人斥无人性誓追究作恶者](/articles/voa/1043357.md)
 
