--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-10 [缅甸军方武力驱离示威群众 至少4人受伤](/articles/dw/1043986.md)
+
+2-10 [弹劾特朗普第二次审讯 美参院投票认定合宪](/articles/dw/1043987.md)
+
 2-10 [世卫溯源专家：新冠很可能从动物通过宿主再传人](/articles/dw/1043988.md)
 
 2-10 [“北溪”争议：乌克兰批德总统扭曲历史](/articles/dw/1043989.md)
@@ -596,8 +600,4 @@
 1-24 [日本法院判决维持双重国籍禁令](/articles/dw/1044284.md)
 
 1-24 [七张图看一周大事](/articles/dw/1044285.md)
-
-1-23 [英国变种新冠病毒的致死率更高？](/articles/dw/1044286.md)
-
-1-23 [德语媒体：摆在拜登面前的“硬骨头”](/articles/dw/1044287.md)
 
