--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-10 [世卫专家排除实验室假说 美国期待检视调查报告](/articles/dw/1043985.md)
+
 2-10 [缅甸军方武力驱离示威群众 至少4人受伤](/articles/dw/1043986.md)
 
 2-10 [弹劾特朗普第二次审讯 美参院投票认定合宪](/articles/dw/1043987.md)
@@ -598,6 +600,4 @@
 1-24 [拜登时代到来 欧洲期盼“伙伴关系新起点”](/articles/dw/1044283.md)
 
 1-24 [日本法院判决维持双重国籍禁令](/articles/dw/1044284.md)
-
-1-24 [七张图看一周大事](/articles/dw/1044285.md)
 
