--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-10 [特朗普二次弹劾审判首日激辩：审判是否合宪？](/articles/voa/1043047.md)
+
 2-10 [为什么国内恐怖主义在美国未被明确定为犯罪?](/articles/voa/1043048.md)
 
 2-10 [迈阿密冰箱失窃激起外界热情火花](/articles/voa/1043049.md)
@@ -598,6 +600,4 @@
 1-30 [美国起诉一名中国公民非法向中国运送功率放大器](/articles/voa/1043345.md)
 
 1-30 [美新国安顾问：应对中国，美国当“先扫自家屋”](/articles/voa/1043346.md)
-
-1-30 [美国务院：对郭飞雄被阻止出境的报道感到不安，正密切关注此案](/articles/voa/1043347.md)
 
