--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-10 [世卫组织：新冠病毒“极不可能”来自实验室泄露](/articles/ft/1046070.md)
+
+2-10 [港交所任命摩根大通银行家欧冠升为行政总裁](/articles/ft/1046071.md)
+
 2-10 [2020年中国新生儿户籍登记数量下降15%](/articles/ft/1046072.md)
 
 2-10 [散户投资者知道自己为什么要买基金吗？](/articles/ft/1046073.md)
@@ -596,8 +600,4 @@
 1-5 [纽交所取消将中国三大电信集团摘牌的计划](/articles/ft/1046368.md)
 
 1-5 [特朗普支持者组织游行 华盛顿求援国民警卫队](/articles/ft/1046369.md)
-
-1-5 [Zen：来自老磨坊镇的互联网服务挑战者](/articles/ft/1046370.md)
-
-1-5 [美股以下挫迎接新年第一个交易日](/articles/ft/1046371.md)
 
