--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-10 [拜登在白宫会见美国商界领袖](/articles/ft/1046069.md)
+
 2-10 [世卫组织：新冠病毒“极不可能”来自实验室泄露](/articles/ft/1046070.md)
 
 2-10 [港交所任命摩根大通银行家欧冠升为行政总裁](/articles/ft/1046071.md)
@@ -598,6 +600,4 @@
 1-5 [拼多多因员工猝死面临严重公关危机](/articles/ft/1046367.md)
 
 1-5 [纽交所取消将中国三大电信集团摘牌的计划](/articles/ft/1046368.md)
-
-1-5 [特朗普支持者组织游行 华盛顿求援国民警卫队](/articles/ft/1046369.md)
 
