--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-10 [Fuck GFW｜ClubHouse被封后如何翻墙听？Shadowrocket上的相关设置](/articles/cdt/386044.md)
+
 2-10 [界面新闻 | 马金瑜回应质疑：我怕被笑话，不愿承认自己是弱者](/articles/cdt/386046.md)
 
 2-10 [PKUhumanrights | Clubhouse用不了？外交部：中国互联网是开放的](/articles/cdt/386047.md)
@@ -598,6 +600,4 @@
 1-10 [雪夜访 | 影像医生张笑春的百日抗疫](/articles/cdt/387226.md)
 
 1-10 [德国之声 | 专访：历史是 “中国最重要的心理工具”](/articles/cdt/387227.md)
-
-1-10 [美国之音 | 蓬佩奥解除美台关系的自我限制](/articles/cdt/387228.md)
 
