--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-10 [美国参议院投票支持继续弹劾特朗普](/articles/ft/1046068.md)
+
 2-10 [拜登在白宫会见美国商界领袖](/articles/ft/1046069.md)
 
 2-10 [世卫组织：新冠病毒“极不可能”来自实验室泄露](/articles/ft/1046070.md)
@@ -598,6 +600,4 @@
 1-5 [富士康与拜腾汽车达成合作](/articles/ft/1046366.md)
 
 1-5 [拼多多因员工猝死面临严重公关危机](/articles/ft/1046367.md)
-
-1-5 [纽交所取消将中国三大电信集团摘牌的计划](/articles/ft/1046368.md)
 
