--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-10 [“资产、货币”双充裕时代的投资之道](/articles/ft/1046066.md)
+
+2-10 [华尔街的女股神是如何炼成的？](/articles/ft/1046067.md)
+
 2-10 [美国参议院投票支持继续弹劾特朗普](/articles/ft/1046068.md)
 
 2-10 [拜登在白宫会见美国商界领袖](/articles/ft/1046069.md)
@@ -596,8 +600,4 @@
 1-5 [英国政府面临帮助学生度过封锁的压力](/articles/ft/1046364.md)
 
 1-5 [比特币加速推动国际金融体系的三大变局](/articles/ft/1046365.md)
-
-1-5 [富士康与拜腾汽车达成合作](/articles/ft/1046366.md)
-
-1-5 [拼多多因员工猝死面临严重公关危机](/articles/ft/1046367.md)
 
