--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-10 [极昼工作室｜北京西站“静悄悄”](/articles/cdt/386038.md)
+
 2-10 [Fuck GFW｜ClubHouse被封后如何翻墙听？Shadowrocket上的相关设置](/articles/cdt/386044.md)
 
 2-10 [界面新闻 | 马金瑜回应质疑：我怕被笑话，不愿承认自己是弱者](/articles/cdt/386046.md)
@@ -598,6 +600,4 @@
 1-10 [翻译教学与研究 | 中国大学的现实是：大学层次越低，上课越多，学生读书越少](/articles/cdt/387224.md)
 
 1-10 [雪夜访 | 影像医生张笑春的百日抗疫](/articles/cdt/387226.md)
-
-1-10 [德国之声 | 专访：历史是 “中国最重要的心理工具”](/articles/cdt/387227.md)
 
