--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+2-10 [中央通讯社｜Clubhouse被封中国官媒称片面反华非言论自由](/articles/cdt/386030.md)
+
+2-10 [【旧闻重温】“胡编生成器”上线  一秒生成“胡锡进体”评论文](/articles/cdt/386031.md)
+
+2-10 [【CDTV】美国之音｜李文亮去世一周年，网络祭奠的悲与不舍](/articles/cdt/386034.md)
+
 2-10 [三上文存｜没有恶意的欠薪，哪来的恶意讨薪？](/articles/cdt/386036.md)
 
 2-10 [DT财经｜数据为证，我找不到对象真的不赖我](/articles/cdt/386037.md)
@@ -594,10 +600,4 @@
 1-15 [2020年新冠疫情时间线](/articles/cdt/387206.md)
 
 1-11 [【CDTV】因为看到同事被抬上救护车我被拼多多开除了](/articles/cdt/387217.md)
-
-1-11 [肥柴青年 | 湖北某报的“权威发布”本可成为丰碑！](/articles/cdt/387221.md)
-
-1-11 [二大爷｜不能掀桌子是政治文明的底线](/articles/cdt/387222.md)
-
-1-11 [光传媒 | 郭飞雄：致李克强总理、赵克志部长的紧急公开信](/articles/cdt/387223.md)
 
