--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-10 [国际学者联署呼吁习近平允许郭飞雄前往美国](/articles/rfi/1034961.md)
+
+2-10 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1034962.md)
+
 2-10 [台湾官方证实已签约可获莫德瑞疫苗505万剂年中开始交付](/articles/rfi/1034963.md)
 
 2-10 [美国参议院表决：弹劾特朗普不违宪！继续审！ - 要闻解说](/articles/rfi/1034964.md)
@@ -596,8 +600,4 @@
 2-5 [川普拒为弹劾审讯作证 称民主党人玩公关噱头 – 法国国际广播电台 - RFI](/articles/rfi/1035259.md)
 
 2-5 [在英佯装媒体记者 3名中国间谍遭驱逐 – 法国国际广播电台 - RFI](/articles/rfi/1035260.md)
-
-2-5 [日股收红 市场静候美国公布就业数据 – 法国国际广播电台 - RFI](/articles/rfi/1035261.md)
-
-2-5 [杜兰特、詹姆斯 NBA明星赛得票暂时领先 – 法国国际广播电台 - RFI](/articles/rfi/1035262.md)
 
