--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-10 [商用黏着剂代发蜡 美国女发黏一个月上网求救 – 法国国际广播电台 - RFI](/articles/rfi/1034959.md)
+
+2-10 [佳士得拍卖墨西哥文物引发争议 - 文化遗产](/articles/rfi/1034960.md)
+
 2-10 [国际学者联署呼吁习近平允许郭飞雄前往美国](/articles/rfi/1034961.md)
 
 2-10 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1034962.md)
@@ -596,8 +600,4 @@
 2-5 [美众院通过惩处共和党争议议员 逐出两委员会 – 法国国际广播电台 - RFI](/articles/rfi/1035257.md)
 
 2-5 [数十万劳工遭沙国拒入境 印度仍出口疫苗犯众怒 – 法国国际广播电台 - RFI](/articles/rfi/1035258.md)
-
-2-5 [川普拒为弹劾审讯作证 称民主党人玩公关噱头 – 法国国际广播电台 - RFI](/articles/rfi/1035259.md)
-
-2-5 [在英佯装媒体记者 3名中国间谍遭驱逐 – 法国国际广播电台 - RFI](/articles/rfi/1035260.md)
 
