--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-10 [无国界记者：报道疫情不是罪，北京应立即释放被捕记者](/articles/voa/1043040.md)
+
 2-10 [国际学界关注郭飞雄事件 致函中共高层领导人吁请放人](/articles/voa/1043041.md)
 
 2-10 [从缺席审判到没收涉案财产 中共加大对境外异议人士的威慑](/articles/voa/1043042.md)
@@ -598,6 +600,4 @@
 1-30 [美国战略东移，应警惕中国在中东乘虚而入](/articles/voa/1043338.md)
 
 1-30 [联合盟友共同应对中国挑战，拜登政府能成功吗？](/articles/voa/1043339.md)
-
-1-30 [从特朗普到拜登，美国对华政策的变与不变](/articles/voa/1043340.md)
 
