--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-11 [中国疫苗在墨西哥获紧急使用授权 只需一针](/articles/dw/1043968.md)
+
 2-10 [0.8个比特币可购买一辆特斯拉](/articles/dw/1043969.md)
 
 2-10 [阿桑奇：拜登政府不放过 24组织声援](/articles/dw/1043970.md)
@@ -598,6 +600,4 @@
 1-25 [专访：中国军机扰台是为了熟悉对台作战模式](/articles/dw/1044266.md)
 
 1-25 [拜登致电马克龙 美防长与日韩盟友通话](/articles/dw/1044267.md)
-
-1-25 [拜登提1.9万亿纾困方案 聚焦疫苗生产与分配](/articles/dw/1044268.md)
 
