--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-11 [美参议员提出法案 就“世卫协助掩盖新冠信息”向其问责](/articles/voa/1043038.md)
+
 2-10 [美国参议院周三继续对特朗普进行弹劾审判](/articles/voa/1043039.md)
 
 2-10 [无国界记者：报道疫情不是罪，北京应立即释放被捕记者](/articles/voa/1043040.md)
@@ -598,6 +600,4 @@
 1-30 [“少数派报告”中国版的另类现实 大数据预警真有那么神？](/articles/voa/1043336.md)
 
 1-30 [拜登政府官员计划下周与台湾举行供应链对话](/articles/voa/1043337.md)
-
-1-30 [美国战略东移，应警惕中国在中东乘虚而入](/articles/voa/1043338.md)
 
