--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-11 [缅甸示威继续数百公务员加入 军政府实弹镇压多人受伤](/articles/rfi/1034942.md)
+
+2-11 [曾主张开放舆论 中宣部前官员钟沛璋举行遗体告别仪式](/articles/rfi/1034943.md)
+
+2-11 [疫情冲击营运 海尼根全球裁员约8千人 – 法国国际广播电台 - RFI](/articles/rfi/1034944.md)
+
 2-11 [推特：就算特朗普参加2024大选获胜，其账号也将永久性被封](/articles/rfi/1034945.md)
 
 2-11 [不堪校内丑闻压力，巴黎政治大学校长宣布辞职](/articles/rfi/1034946.md)
@@ -594,10 +600,4 @@
 2-5 [圭亚那案：中国说圭方及时纠正错误](/articles/rfi/1035240.md)
 
 2-5 [中美合作切入点？ 美国气候特使克里称预计不久将与中国新的气候特使解振华对话](/articles/rfi/1035241.md)
-
-2-5 [拜登讲话前下马威？中国军方深夜报告成功实施陆基中段反导拦截技术](/articles/rfi/1035242.md)
-
-2-5 [澳网指定饭店出现确诊 507人筛检结果全为阴性 – 法国国际广播电台 - RFI](/articles/rfi/1035243.md)
-
-2-5 [福特汽车将加速推动电动车和数位化 – 法国国际广播电台 - RFI](/articles/rfi/1035244.md)
 
