--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-11 [加拿大情报局长罕见公开批评中国威胁主权并窃取机密](/articles/rfa/1046442.md)
+
 2-11 [推进宗教中国化 《管理办法》禁止神职人员受境外势力支配](/articles/rfa/1046443.md)
 
 2-10 [留学生讨薪遭殴打，议员洗地引众怒](/articles/rfa/1046444.md)
@@ -598,6 +600,4 @@
 1-9 [北京小汤山强拆：小区被拆毁殆尽  留守者遭打伤](/articles/rfa/1046740.md)
 
 1-9 [台湾监委质疑 马政府是否与北京签密约 交换台湾出席世卫](/articles/rfa/1046741.md)
-
-1-8 [北京严控媒体报道阿里巴巴    或已升格政治事件？](/articles/rfa/1046742.md)
 
