--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-11 [美国疾控中心援引一项研究建议戴两幅口罩以更好防范新冠病毒](/articles/voa/1043032.md)
+
+2-11 [俄罗斯、中国与伊朗再次军演 想释放哪些信号](/articles/voa/1043033.md)
+
+2-11 [香港全球民主排名创新低 社运人士谈国安法下如何走民主路](/articles/voa/1043034.md)
+
 2-11 [白宫预算局局长提名人主张对华施压 逼中国遵守规则](/articles/voa/1043035.md)
 
 2-11 [哈萨克族女子成功抵美 曾向BBC披露新疆拘禁营女性遭受性侵](/articles/voa/1043036.md)
@@ -594,10 +600,4 @@
 1-30 [世卫专家访问武汉金银潭医院，中国官方全程严控](/articles/voa/1043330.md)
 
 1-30 [小米美国兴讼要求从“黑名单](/articles/voa/1043331.md)
-
-1-30 [白宫表示美中贸易协议将接受审查](/articles/voa/1043332.md)
-
-1-30 [美军抨击中国在南中国海飞行但说未构成威胁](/articles/voa/1043333.md)
-
-1-30 [美智库学者呼吁 阻止中国取得东亚主导权](/articles/voa/1043334.md)
 
