--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-11 [美国对发动政变的缅甸军方领导人实施制裁](/articles/voa/1043028.md)
+
+2-11 [拜-习尚未通话 专家指拜登还未敲定如何与习打交道](/articles/voa/1043029.md)
+
+2-11 [时事大家谈: 美中隔空较力，拜登为何点明习近平“不民主”？](/articles/voa/1043030.md)
+
+2-11 [白宫要义: 白宫: 派美国专家团到中国查新冠病毒起源“势在必行”](/articles/voa/1043031.md)
+
 2-11 [美国疾控中心援引一项研究建议戴两幅口罩以更好防范新冠病毒](/articles/voa/1043032.md)
 
 2-11 [俄罗斯、中国与伊朗再次军演 想释放哪些信号](/articles/voa/1043033.md)
@@ -592,12 +600,4 @@
 1-31 [时事大家谈：南非新冠变体疫苗难防？](/articles/voa/1043326.md)
 
 1-31 [中港抵制BNO护照，英国表态：立场不动摇](/articles/voa/1043327.md)
-
-1-31 [时事大家谈：中国抗疫“太好”反陷入困境？](/articles/voa/1043328.md)
-
-1-30 [王一梁病逝 折射流亡作家颠沛的一生](/articles/voa/1043329.md)
-
-1-30 [世卫专家访问武汉金银潭医院，中国官方全程严控](/articles/voa/1043330.md)
-
-1-30 [小米美国兴讼要求从“黑名单](/articles/voa/1043331.md)
 
