--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-11 [拜登撤回特朗普的孔子学院限制规定？白宫做出回应](/articles/voa/1043027.md)
+
 2-11 [美国对发动政变的缅甸军方领导人实施制裁](/articles/voa/1043028.md)
 
 2-11 [拜-习尚未通话 专家指拜登还未敲定如何与习打交道](/articles/voa/1043029.md)
@@ -598,6 +600,4 @@
 1-31 [路透社：COVID-19病毒测试盒提供商华大基因与中国军方关系深厚](/articles/voa/1043325.md)
 
 1-31 [时事大家谈：南非新冠变体疫苗难防？](/articles/voa/1043326.md)
-
-1-31 [中港抵制BNO护照，英国表态：立场不动摇](/articles/voa/1043327.md)
 
