--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-11 [拜登撤销特朗普政府要求孔子学院透明化政策](/articles/rfi/1034922.md)
+
+2-11 [德国继续严限交际接触](/articles/rfi/1034923.md)
+
+2-11 [爱拉斯莫的生活与思想第五节 初访英格兰 - 欧洲思想文化长廊](/articles/rfi/1034924.md)
+
 2-11 [17+1还是17-6  习近平为何在欧洲失算](/articles/rfi/1034925.md)
 
 2-11 [遭青年运动攻击 沙乌地机场民用机起火 – 法国国际广播电台 - RFI](/articles/rfi/1034926.md)
@@ -594,10 +600,4 @@
 2-5 [塞尔维亚大规模施打中国疫苗](/articles/rfi/1035220.md)
 
 2-5 [BBC报道新疆案：老胡咋说 网民说什么](/articles/rfi/1035221.md)
-
-2-5 [韩国世贸总干事候选人宣布退选](/articles/rfi/1035222.md)
-
-2-5 [Google Fit健身应用程式升级 可测脉搏呼吸 – 法国国际广播电台 - RFI](/articles/rfi/1035223.md)
-
-2-5 [大幅提高每年难民入境美国上限  拜登改弦更张 – 法国国际广播电台 - RFI](/articles/rfi/1035224.md)
 
