--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+2-11 [热门乐团用气泡包装观众突破新冠封锁](/articles/voa/1043015.md)
+
+2-11 [跨党参议员要求亚马逊老板解释与据报参与监控维吾尔人的中国公司的交易](/articles/voa/1043016.md)
+
+2-11 [拜登上任后美国务院官员首度会晤台驻美代表](/articles/voa/1043017.md)
+
+2-11 [TikTok出售案搁置？白宫：正在审议相关风险](/articles/voa/1043018.md)
+
+2-11 [缅甸政变冲击中资， 一带一路腐败开路政治风险多多](/articles/voa/1043019.md)
+
 2-11 [白宫要义: 拜登: 国防部成立新的中国战略小组，制裁缅甸政变](/articles/voa/1043020.md)
 
 2-11 [美国加入世卫新冠疫苗获取机制资助金额维持现状](/articles/voa/1043021.md)
@@ -590,14 +600,4 @@
 2-1 [2021年度诺贝尔和平奖提名星期天结束](/articles/voa/1043313.md)
 
 1-31 [英国周日开通BNO签证通道 预计30万人离开香港移民英国](/articles/voa/1043314.md)
-
-1-31 [美学者建议：体现美国多样化优势，拜登应任命黑人驻华大使](/articles/voa/1043315.md)
-
-1-31 [中国的抗疫绝招与人类文明的反差](/articles/voa/1043316.md)
-
-1-31 [英国为香港居民开放成为公民的特别签证途径](/articles/voa/1043317.md)
-
-1-31 [新冠疫情回头 中国一月份工厂复苏放缓](/articles/voa/1043318.md)
-
-1-31 [英国准备正式申请加入跨太平洋贸易区](/articles/voa/1043319.md)
 
