--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-11 [【404文库】枪稿Lite | 为什么Clubhouse必死无疑?](/articles/cdt/386025.md)
+
 2-11 [德国之声 | 美方不接受世卫调查结果 遭北京与世卫专家回怼](/articles/cdt/386026.md)
 
 2-10 [中央通讯社｜Clubhouse被封中国官媒称片面反华非言论自由](/articles/cdt/386030.md)
@@ -598,6 +600,4 @@
 1-11 [德国之声｜中国卫健委：世卫专家1月14日来华考察](/articles/cdt/387194.md)
 
 1-11 [深蓝财经｜“中国舆论监督网”创办人，被以非法经营罪判刑5年](/articles/cdt/387205.md)
-
-1-15 [2020年新冠疫情时间线](/articles/cdt/387206.md)
 
