--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-11 [美国总统拜登与中国国家主席习近平通电话](/articles/voa/1043013.md)
+
+2-11 [俄罗斯以违反“外国代理人”法为由对自由欧洲电台/自由电台处以罚款](/articles/voa/1043014.md)
+
 2-11 [热门乐团用气泡包装观众突破新冠封锁](/articles/voa/1043015.md)
 
 2-11 [跨党参议员要求亚马逊老板解释与据报参与监控维吾尔人的中国公司的交易](/articles/voa/1043016.md)
@@ -596,8 +600,4 @@
 2-1 [俄全国反普京示威持续 莫斯科草木皆兵封锁市中心](/articles/voa/1043311.md)
 
 2-1 [各界人士发联署信 呼吁各国政府促成郭飞雄尽快来美照顾病重妻子](/articles/voa/1043312.md)
-
-2-1 [2021年度诺贝尔和平奖提名星期天结束](/articles/voa/1043313.md)
-
-1-31 [英国周日开通BNO签证通道 预计30万人离开香港移民英国](/articles/voa/1043314.md)
 
