--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-11 [拜登制裁缅甸军事领袖   凍結10亿美元資金](/articles/dw/1043964.md)
+
 2-11 [香港法官引国安法案例  禁网台主持人傑斯保释](/articles/dw/1043965.md)
 
 2-11 [拜登习近平首度通电话  谈香港丶新疆丶贸易](/articles/dw/1043966.md)
@@ -598,6 +600,4 @@
 1-25 [芯片短缺制约汽车业—— 德国要台湾帮忙](/articles/dw/1044262.md)
 
 1-25 [客座评论：北京和拜登政府的冲突可能比人们想象的要提早发生](/articles/dw/1044263.md)
-
-1-25 [荷兰宣布宵禁防疫 民众抗议妨害自由](/articles/dw/1044264.md)
 
