--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-11 [布林肯：美日同盟是自由开放印太地区的基石](/articles/voa/1043010.md)
+
 2-11 [四方安全对话峰会筹备之际，澳智库分析台海变局](/articles/voa/1043011.md)
 
 2-11 [弹劾审判第二天：民主党展示新视频指控特朗普“煽动叛乱”](/articles/voa/1043012.md)
@@ -598,6 +600,4 @@
 2-1 [索马里首都一家酒店外面发生剧烈爆炸](/articles/voa/1043308.md)
 
 2-1 [总统经济顾问说，拜登可能会在病毒救济援助问题上妥协](/articles/voa/1043309.md)
-
-2-1 [中港政府反制英国不承认BNO护照 市民指加速用脚投票申请赴英](/articles/voa/1043310.md)
 
