--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-11 [互联网怪盗团｜对B站当前问题的总看法](/articles/cdt/386006.md)
+
 2-11 [ABC中文 | 中国屏蔽Clubhouse的前日，我听到汉族人向维族人道歉](/articles/cdt/386011.md)
 
 2-11 [美国之音 | 从缺席审判到没收“涉案”财产  中共加大对境外异议人士的威慑](/articles/cdt/386013.md)
@@ -598,6 +600,4 @@
 1-11 [【CDT连载】巴奴的救赎（22）](/articles/cdt/387179.md)
 
 1-11 [【404文库】黑羊公社｜门槛与救济：从总统被封号理解社交媒体封号争议中的言论自由](/articles/cdt/387181.md)
-
-1-11 [【立此存照】“我们的严防控制，反正比你们国家强多了”](/articles/cdt/387193.md)
 
