--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-11 [拜登上任后首次与习近平通话    学者指美中关系不能回到从前](/articles/rfa/1046431.md)
+
 2-11 [美情报专家：须防中共经济间谍“异国采花、中华酿蜜”](/articles/rfa/1046432.md)
 
 2-11 [《76天》展现武汉疫情百态  填补中国官方叙事短板](/articles/rfa/1046433.md)
@@ -598,6 +600,4 @@
 1-12 [台湾发放新版护照   两千多人抢办](/articles/rfa/1046729.md)
 
 1-11 [美台官员接触限制取消    环时猛打官方审慎](/articles/rfa/1046730.md)
-
-1-11 [美国务院取消对台交往限制 “不再单方面安抚共产党政权”](/articles/rfa/1046731.md)
 
