--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-11 [拜登与习近平农历年前通电话](/articles/rfi/1034911.md)
+
+2-11 [“咒骂林郑死全家”网台主持被控国安法不得保释](/articles/rfi/1034912.md)
+
 2-11 [世卫仍建议接种阿斯利康疫苗 法国门诊医生准备接种](/articles/rfi/1034913.md)
 
 2-11 [富可敌国马云怀疑拖欠3000万工程数](/articles/rfi/1034914.md)
@@ -596,8 +600,4 @@
 2-6 [拜登修复美国外交(三) 中东人道危机与伊朗](/articles/rfi/1035209.md)
 
 2-6 [拜登修复美国外交(二) 恢复缅甸民主  应对中国强势](/articles/rfi/1035210.md)
-
-2-6 [拜登修复美国外交 (一) 美国回来了](/articles/rfi/1035211.md)
-
-2-6 [巴西淡水河谷矿业溃坝受害者表不满](/articles/rfi/1035212.md)
 
