--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-11 [几内亚湾海盗猖獗 中国渔船和一艘法国道达尔油轮及船员遭劫持](/articles/rfi/1034908.md)
+
+2-11 [日本首相菅义伟给在日华人华侨拜年](/articles/rfi/1034909.md)
+
+2-11 [美国经“川普之乱”后，正重新制订具长期目标的“新对中策略” - 观察中国](/articles/rfi/1034910.md)
+
 2-11 [拜登与习近平农历年前通电话](/articles/rfi/1034911.md)
 
 2-11 [“咒骂林郑死全家”网台主持被控国安法不得保释](/articles/rfi/1034912.md)
@@ -594,10 +600,4 @@
 2-6 [中国在Covid征兆下庆农历牛年春节](/articles/rfi/1035206.md)
 
 2-6 [副总统贺锦丽投下关键一票，美国会参议院通过1.9万亿美元经济纾困案](/articles/rfi/1035207.md)
-
-2-6 [世卫专家: 武汉病毒溯源两周与石正丽等讨论 但疑问多于答案](/articles/rfi/1035208.md)
-
-2-6 [拜登修复美国外交(三) 中东人道危机与伊朗](/articles/rfi/1035209.md)
-
-2-6 [拜登修复美国外交(二) 恢复缅甸民主  应对中国强势](/articles/rfi/1035210.md)
 
