--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-11 [小虎｜是谁偷走我的年——被建构的春节与记忆](/articles/cdt/386001.md)
+
 2-11 [维舟｜不完美的受害者](/articles/cdt/386002.md)
 
 2-11 [次元土豆｜B站引以为傲的上千个文化圈层，正在反噬这个年轻的平台](/articles/cdt/386004.md)
@@ -598,6 +600,4 @@
 1-12 [导筒directube | 从《一秒钟》到《兰心大剧院》：专属于中国影迷的创伤式观影体验](/articles/cdt/387171.md)
 
 1-12 [笨妈育儿育己 | 问答：“婚驴”、浪漫爱、渣男识别、开放关系](/articles/cdt/387172.md)
-
-1-12 [黑羊公社 | 废言|进京迷城：检查站、核酸报告与尴尬北三县](/articles/cdt/387174.md)
 
