--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-11 [拜登制裁缅甸军方高层  凍結10亿美元資金](/articles/dw/1043953.md)
+
 2-11 [德外交部：中方“侵入性”检测  不建议前往中国](/articles/dw/1043954.md)
 
 2-11 [专访世卫专家组成员：病毒溯源是复杂拼图](/articles/dw/1043955.md)
@@ -598,6 +600,4 @@
 1-26 [习近平致辞世界经济论坛：对抗歧视最终将损害各国利益](/articles/dw/1044251.md)
 
 1-26 [德语媒体: 私企也姓党 经济怎会好?](/articles/dw/1044252.md)
-
-1-25 [研究报告：西方在世界经济中正失去分量](/articles/dw/1044253.md)
 
