--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-11 [中国和印度开始从边境对峙地区撤军](/articles/voa/1043007.md)
+
 2-11 [SWIFT挺数字人民币跨境 美中货币“热战”将开打？](/articles/voa/1043008.md)
 
 2-11 [拜登与习近平在美国大选后首次通话](/articles/voa/1043009.md)
@@ -598,6 +600,4 @@
 2-1 [新冠疫苗投放持续取得进展](/articles/voa/1043305.md)
 
 2-1 [拜登总统呼吁国会尽速通过“美国救援法案”](/articles/voa/1043306.md)
-
-2-1 [缅甸执政党发言人说，缅甸领导人昂山素季和其他人被拘捕](/articles/voa/1043307.md)
 
