--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-11 [因歧视女性言论受批 东京奥组委主席森喜朗将辞职](/articles/rfi/1034894.md)
+
+2-11 [腾讯高管因涉及腐败案被拘留调查](/articles/rfi/1034895.md)
+
+2-11 [拜登向习近平强调对台关注 台总统府：持续为印太稳定繁荣贡献](/articles/rfi/1034896.md)
+
+2-11 [中东染疫致死病例突破10万人 – 法国国际广播电台 - RFI](/articles/rfi/1034897.md)
+
+2-11 [拜登上台后首次与习近平通话 官方表述各取所需](/articles/rfi/1034898.md)
+
 2-11 [全球疫情逾1亿730万例确诊 超过235万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1034899.md)
 
 2-11 [拜登中国年除夕首次通话习近平 贺岁也谈关注香港新疆台湾 - 要闻解说](/articles/rfi/1034900.md)
@@ -590,14 +600,4 @@
 2-6 [加州已有近140万人签名罢免州长纽森](/articles/rfi/1035192.md)
 
 2-6 [中国在中亚地区积极投资及其演变 - 法国世界报](/articles/rfi/1035193.md)
-
-2-6 [塞内加尔卡萨芒斯 一场无声的战争](/articles/rfi/1035194.md)
-
-2-6 [拜登对华政策：“但是”句式和“竞争者”定位 - 要闻分析](/articles/rfi/1035195.md)
-
-2-6 [乐观期待美国振兴经济措施 美股涨 – 法国国际广播电台 - RFI](/articles/rfi/1035196.md)
-
-2-6 [赛扬奖强投鲍尔与道奇签约 改写MLB薪资纪录 – 法国国际广播电台 - RFI](/articles/rfi/1035197.md)
-
-2-6 [人民因疫情面临极限 拜登：须快速行动推动纾困案 – 法国国际广播电台 - RFI](/articles/rfi/1035198.md)
 
