--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-12 [中国宣布禁止BBC世界新闻台在华继续落地 BBC表遗憾](/articles/rfi/1034888.md)
+
+2-12 [欧洲理事会主席米歇尔呼吁与拜登政府协商对华政策](/articles/rfi/1034889.md)
+
 2-12 [新冠疫苗注射法国人可否自行选择种类](/articles/rfi/1034890.md)
 
 2-12 [梅迪维夫挺进澳网第三轮 – 法国国际广播电台 - RFI](/articles/rfi/1034891.md)
@@ -596,8 +600,4 @@
 2-6 [被指报复罢韩的罢捷投票初报 不同意票暂领先](/articles/rfi/1035186.md)
 
 2-6 [驻港京官为香港前景作「判断」 政治民生均有 评论指预示北京更深介入港务](/articles/rfi/1035187.md)
-
-2-6 [支联会花市摊位32年来首遭叫停 当局指有「无关物品」 李卓人不满自由受压续抗争](/articles/rfi/1035188.md)
-
-2-6 [正式数据下来了：贸易停战第一阶段协议北京买美国农产品未达标](/articles/rfi/1035189.md)
 
