--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-12 [人权观察：新冠疫情成政府打压言论自由的借口，中国被点名](/articles/voa/1043000.md)
+
+2-12 [专家：中国海警船授权开火标志南中国海紧张局势升级](/articles/voa/1043001.md)
+
+2-12 [美国国务卿布林肯发表声明祝贺中国农历新年](/articles/voa/1043002.md)
+
 2-12 [面对中国科技威胁，智库建议拜登政府制定积极的数字化政策](/articles/voa/1043003.md)
 
 2-12 [拜登强调对台湾的关注 台总统府表示感谢](/articles/voa/1043004.md)
@@ -594,10 +600,4 @@
 2-1 [世卫组织专家组到访湖北和武汉疾控中心 新冠溯源调查仍扑朔迷离](/articles/voa/1043298.md)
 
 2-1 [病毒可怕，个人隐私被泄露更可怕](/articles/voa/1043299.md)
-
-2-1 [缅甸军方夺取政权 拘捕昂山素季 白宫发声明促放人](/articles/voa/1043300.md)
-
-2-1 [弹劾案下周开审 前总统特朗普选定新辩护律师](/articles/voa/1043301.md)
-
-2-1 [专家：拜登给对俄政策确定新基调](/articles/voa/1043302.md)
 
