--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-12 [竞逐5G华为上诉   瑞典行政法院驳回](/articles/rfa/1046427.md)
+
 2-12 [香港抗争者在台开餐厅 婉拒捐款不愿标签化](/articles/rfa/1046428.md)
 
 2-11 [年三十团圆夜 香港数百抗争者与民主人士铁窗渡过](/articles/rfa/1046429.md)
@@ -598,6 +600,4 @@
 1-12 [马云是否该学荣毅仁“举双手”向党投降？](/articles/rfa/1046725.md)
 
 1-12 [教会活动导致疫情扩大？ 谣言下的河北天主教会](/articles/rfa/1046726.md)
-
-1-12 [丹麦对华立场强硬  外长支持助许智峰流亡议员](/articles/rfa/1046727.md)
 
