--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-12 [蓬佩奥被曝花纳税人钱定制中国制造的纪念笔](/articles/rfi/1034886.md)
+
+2-12 [于文生获马丁恩纳尔斯奖](/articles/rfi/1034887.md)
+
 2-12 [中国宣布禁止BBC世界新闻台在华继续落地 BBC表遗憾](/articles/rfi/1034888.md)
 
 2-12 [欧洲理事会主席米歇尔呼吁与拜登政府协商对华政策](/articles/rfi/1034889.md)
@@ -596,8 +600,4 @@
 2-6 [中国遭封杀“劣迹艺人”可重现生机再出山了](/articles/rfi/1035184.md)
 
 2-6 [港府未收科兴疫苗最终数据 中国药监局已受理上市申请](/articles/rfi/1035185.md)
-
-2-6 [被指报复罢韩的罢捷投票初报 不同意票暂领先](/articles/rfi/1035186.md)
-
-2-6 [驻港京官为香港前景作「判断」 政治民生均有 评论指预示北京更深介入港务](/articles/rfi/1035187.md)
 
