--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-12 [拜登：要防中国吃掉我们的午餐](/articles/rfa/1046424.md)
+
+2-12 [近日爆红的“精英俱乐部”背后的技术](/articles/rfa/1046425.md)
+
+2-12 [季风:“醒来的人把春晚当笑话看”](/articles/rfa/1046426.md)
+
 2-12 [竞逐5G华为上诉   瑞典行政法院驳回](/articles/rfa/1046427.md)
 
 2-12 [香港抗争者在台开餐厅 婉拒捐款不愿标签化](/articles/rfa/1046428.md)
@@ -594,10 +600,4 @@
 1-12 [常玮平妻子：他们要置他于死地 我必须站出来](/articles/rfa/1046722.md)
 
 1-12 [拼多多员工发视频揭露压榨内幕](/articles/rfa/1046723.md)
-
-1-12 [推特封禁特朗普  微博敢封习近平吗？](/articles/rfa/1046724.md)
-
-1-12 [马云是否该学荣毅仁“举双手”向党投降？](/articles/rfa/1046725.md)
-
-1-12 [教会活动导致疫情扩大？ 谣言下的河北天主教会](/articles/rfa/1046726.md)
 
