--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-12 [拜登警告：如果什么都不做 中国将压垮我们](/articles/rfi/1034879.md)
+
+2-12 [德国宣布列捷克与奥地利几地为病毒变种区域 关闭国门](/articles/rfi/1034880.md)
+
+2-12 [美国谴责中国不允许BBC世界新闻台继续落地](/articles/rfi/1034881.md)
+
+2-12 [欧股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1034882.md)
+
 2-12 [德国准备好尽快接纳50名白罗斯反对派](/articles/rfi/1034883.md)
 
 2-12 [“削减媒体自由不可接受”：英国回应中国禁BBC世界新闻台继续落地](/articles/rfi/1034884.md)
@@ -592,12 +600,4 @@
 2-6 [湖南菜市场传摊贩现场杀活猫](/articles/rfi/1035177.md)
 
 2-6 [中国海警船在实施《海警法》后首次进入钓鱼岛](/articles/rfi/1035178.md)
-
-2-6 [德法两国领袖喊话 声援欧盟COVID-19疫苗策略 – 法国国际广播电台 - RFI](/articles/rfi/1035179.md)
-
-2-6 [暴龙123比117力克篮网 杜兰特因防疫规定被迫提早退场 – 法国国际广播电台 - RFI](/articles/rfi/1035180.md)
-
-2-6 [缅甸3千人涌向街头示威 军政府扩大切断国内网路 – 法国国际广播电台 - RFI](/articles/rfi/1035181.md)
-
-2-6 [世卫溯源调查之际 中国再定调疫情多国多点爆发](/articles/rfi/1035182.md)
 
