--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+2-12 [缅甸民众持续抗议示威     美国制裁缅甸军政府](/articles/rfa/1046420.md)
+
+2-12 [美媒曝腾讯高管涉泄微信数据而被拘](/articles/rfa/1046421.md)
+
+2-12 [揭露新疆性暴力的证人抵美  BBC被禁在中国落地](/articles/rfa/1046422.md)
+
+2-12 [美国不接受世卫调查结果  世卫发现新线索](/articles/rfa/1046423.md)
+
 2-12 [拜登：要防中国吃掉我们的午餐](/articles/rfa/1046424.md)
 
 2-12 [近日爆红的“精英俱乐部”背后的技术](/articles/rfa/1046425.md)
@@ -592,12 +600,4 @@
 1-12 [美台交流限制取消 美国务院官员立马会见台湾外交官](/articles/rfa/1046718.md)
 
 1-12 [疫情重临中国    多省破天荒无限期押后两会](/articles/rfa/1046719.md)
-
-1-12 [取消对台交往限制   拜登政府受限还是受惠？](/articles/rfa/1046720.md)
-
-1-12 [中国发布法治建设蓝图给谁看？](/articles/rfa/1046721.md)
-
-1-12 [常玮平妻子：他们要置他于死地 我必须站出来](/articles/rfa/1046722.md)
-
-1-12 [拼多多员工发视频揭露压榨内幕](/articles/rfa/1046723.md)
 
