--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-12 [拜登:美国如果不行动起来 中国“会吃掉我们的午餐”](/articles/voa/1042993.md)
+
 2-12 [时事大家谈: Clubhouse在“墙国”昙花一现 北京忌讳言论自由如天敌](/articles/voa/1042994.md)
 
 2-12 [拜登取消美墨边境紧急状态](/articles/voa/1042995.md)
@@ -598,6 +600,4 @@
 2-2 [澳大利亚加强帮助东南亚打击犯罪 抗衡中国影响力](/articles/voa/1043291.md)
 
 2-2 [黎智英就国安法勾结罪保释上诉案 香港终审法院押后裁决需继续还柙](/articles/voa/1043292.md)
-
-2-2 [拜登首席医学顾问弗契将与钟南山讨论疫情防控](/articles/voa/1043293.md)
 
