--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+2-12 [疫苗发放关注公平 地方官员呼吁联邦拨款](/articles/voa/1042988.md)
+
+2-12 [弹劾案起诉方：骚乱者是在服从特朗普的命令](/articles/voa/1042989.md)
+
+2-12 [中国人权律师余文生狱中荣获国际人权奖](/articles/voa/1042990.md)
+
+2-12 [考虑更多出口限制，拜登对华科技政策现雏形？](/articles/voa/1042991.md)
+
+2-12 [拜登政府要求法院暂停审理有关Wechat和TikTok的案件](/articles/voa/1042992.md)
+
 2-12 [拜登:美国如果不行动起来 中国“会吃掉我们的午餐”](/articles/voa/1042993.md)
 
 2-12 [时事大家谈: Clubhouse在“墙国”昙花一现 北京忌讳言论自由如天敌](/articles/voa/1042994.md)
@@ -590,14 +600,4 @@
 2-2 [国会预测：美国经济今年中期将恢复正常](/articles/voa/1043286.md)
 
 2-2 [民主党掌控白宫国会，权力制衡还可能吗？](/articles/voa/1043287.md)
-
-2-2 [缅甸军方政变 拜登声明：对民主和法治的直接攻击](/articles/voa/1043288.md)
-
-2-2 [时事大家谈: 官媒揭“厕所革命”弊端，习时代“折腾”知多少？](/articles/voa/1043289.md)
-
-2-2 [一种新武器？中国船只在台湾宣称拥有主权的水域挖砂](/articles/voa/1043290.md)
-
-2-2 [澳大利亚加强帮助东南亚打击犯罪 抗衡中国影响力](/articles/voa/1043291.md)
-
-2-2 [黎智英就国安法勾结罪保释上诉案 香港终审法院押后裁决需继续还柙](/articles/voa/1043292.md)
 
