--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-12 [缅甸网络安全专家：中国正帮助缅甸军方建立防火墙](/articles/voa/1042982.md)
+
 2-12 [白宫要义: 拜登说中国想取代美国，白宫说拜登政府将做中国人权的民主榜样](/articles/voa/1042983.md)
 
 2-12 [中共数字威权主义的最终目标：培养自我审查的“和谐新人类”](/articles/voa/1042984.md)
@@ -598,6 +600,4 @@
 2-2 [专家视点: 华盛顿学者分析缅甸军方政变对美中两国影响](/articles/voa/1043280.md)
 
 2-2 [白宫要义: 拜登警告缅甸或恢复制裁，会共和党参议员共商新冠纾困](/articles/voa/1043281.md)
-
-2-2 [布林肯：中国对美构成最重大挑战](/articles/voa/1043282.md)
 
