--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-12 [奔向自由，香港青年只身跨越半个地球逃亡美国](/articles/voa/1042978.md)
+
 2-12 [前苏联间谍工具在比弗利山庄拍卖](/articles/voa/1042979.md)
 
 2-12 [“让政府更贴近民意” 加州华人看罢免州长行动](/articles/voa/1042980.md)
@@ -598,6 +600,4 @@
 2-2 [缅甸军事政变 美国会两党同声谴责、呼吁放人](/articles/voa/1043276.md)
 
 2-2 [美国政府可能不再使用具有“异己、外国人”含义的词汇](/articles/voa/1043277.md)
-
-2-2 [新冠疫苗渐显功效 少数族裔接种率仍待提高](/articles/voa/1043278.md)
 
