--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-12 [拜仁俱乐部世界杯封王 凑满1年内第6冠 – 法国国际广播电台 - RFI](/articles/rfi/1034865.md)
+
 2-12 [赞成科企为新闻付费 微软：全世界都该跟进 – 法国国际广播电台 - RFI](/articles/rfi/1034866.md)
 
 2-12 [拜登确保今夏3亿美民众都施打疫苗 批川普未尽责 – 法国国际广播电台 - RFI](/articles/rfi/1034867.md)
@@ -598,6 +600,4 @@
 2-6 [缅甸：军政府切断全国网络](/articles/rfi/1035163.md)
 
 2-6 [COVID-19全球逾1亿535万例确诊 超过229万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1035164.md)
-
-2-6 [伦敦与北京紧张关系不断升级 - 法国报纸摘要](/articles/rfi/1035165.md)
 
