--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-12 [森喜朗性别歧视风波请辞  点名更老男人接任](/articles/dw/1043942.md)
+
 2-12 [拜登政府叫停微信禁令](/articles/dw/1043943.md)
 
 2-12 [中国封杀BBC新闻台  英外相：不可接受](/articles/dw/1043944.md)
@@ -598,6 +600,4 @@
 1-26 [中国新西兰双边自贸协定升级](/articles/dw/1044240.md)
 
 1-26 [机器人苏菲亚担忧疫情 决心帮助人类](/articles/dw/1044241.md)
-
-1-26 [疫情重创德国经济  5%企业可能破产](/articles/dw/1044242.md)
 
