--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-12 [维舟｜中国年](/articles/cdt/385989.md)
+
+2-12 [基本常识｜辛苦科普一整年，一台春晚全毁完](/articles/cdt/385992.md)
+
 2-12 [端传媒 | 不想生孩子的中国年轻人：消失的性生活、猫当孩子养（节选）](/articles/cdt/385994.md)
 
 2-12 [美国之音 | 中国禁止BBC世界新闻台在华落地 美英同声谴责](/articles/cdt/385996.md)
@@ -596,8 +600,4 @@
 1-12 [孔师傅的杂货铺｜石家庄疫情下的“农村非法宗教](/articles/cdt/387147.md)
 
 1-12 [【时代的一粒沙】每日人物｜外卖骑手，倒在寒冬里](/articles/cdt/387148.md)
-
-1-13 [【CDT导览】“美国国会骚乱”后  中国或成最大赢家](/articles/cdt/387165.md)
-
-1-12 [重建巴别塔计划 | 一位五个月共休息了五天的拼多多员工决定离职](/articles/cdt/387170.md)
 
