--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-12 [【新闻连连看】习近平与拜登新年通电话 中方报道“避重就轻”？](/articles/cdt/385982.md)
+
 2-12 [【立此存照】出播别脆干妈他你 论评发让不都晚春 ​​​​](/articles/cdt/385988.md)
 
 2-12 [维舟｜中国年](/articles/cdt/385989.md)
@@ -598,6 +600,4 @@
 1-12 [莱昂小李子｜申通快递违法辞退应届生 副总监：9点后下班是为你们负责](/articles/cdt/387140.md)
 
 1-12 [【新闻连连看】“小伙辞职回国送外卖” VS “我连命都不要了我要血汗钱”](/articles/cdt/387146.md)
-
-1-12 [孔师傅的杂货铺｜石家庄疫情下的“农村非法宗教](/articles/cdt/387147.md)
 
