--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-12 [忧虑变种新冠   德国封锁部分边境](/articles/dw/1043940.md)
+
 2-12 [记者手记：疫情期间，在美华人如何度过春节](/articles/dw/1043941.md)
 
 2-12 [森喜朗性别歧视风波请辞  点名更老男人接任](/articles/dw/1043942.md)
@@ -598,6 +600,4 @@
 1-26 [牛津疫苗对老年人有效率仅为8%？药企驳斥报道](/articles/dw/1044238.md)
 
 1-26 [印媒：印度对59款中国应用的禁令永久化](/articles/dw/1044239.md)
-
-1-26 [中国新西兰双边自贸协定升级](/articles/dw/1044240.md)
 
