--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-12 [缅甸军方陆续逮捕前朝人士后 特赦逾2.3万人 – 法国国际广播电台 - RFI](/articles/rfi/1034845.md)
+
+2-12 [BBC世界新闻遭中国禁播 美国强烈谴责 – 法国国际广播电台 - RFI](/articles/rfi/1034846.md)
+
 2-12 [中国维权律师余文生狱中获颁人权奖 妻子许艳出席线上仪式](/articles/rfi/1034847.md)
 
 2-12 [东京奥运会残奥会组委会主席森喜朗决定辞职](/articles/rfi/1034848.md)
@@ -596,8 +600,4 @@
 2-7 [直接和美国人民对话 拜登与加州失业妇女通电话 – 法国国际广播电台 - RFI](/articles/rfi/1035143.md)
 
 2-7 [非盟34届峰会开幕 马哈马特赢得连任](/articles/rfi/1035144.md)
-
-2-7 [布林肯与杨洁篪首度通话 - 要闻解说](/articles/rfi/1035145.md)
-
-2-7 [周六缅甸仰光等地爆发迄今最大规模反政变示威 - 要闻分析](/articles/rfi/1035146.md)
 
