--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-12 [缅甸抗议活动持续 军方拘押更多政府官员](/articles/voa/1042975.md)
+
+2-12 [人脸识别把人变成“透明人” 中共极权监控下人人自危](/articles/voa/1042976.md)
+
 2-12 [拜登：中国将“吃我们的午餐](/articles/voa/1042977.md)
 
 2-12 [奔向自由，香港青年只身跨越半个地球逃亡美国](/articles/voa/1042978.md)
@@ -596,8 +600,4 @@
 2-2 [黑人维权组织将继续巩固基层组织施压拜登政府](/articles/voa/1043273.md)
 
 2-2 [缅甸政变 拜登面临首个外交挑战](/articles/voa/1043274.md)
-
-2-2 [德黑兰加紧铀浓缩 伊朗核协议命运悬于一线](/articles/voa/1043275.md)
-
-2-2 [缅甸军事政变 美国会两党同声谴责、呼吁放人](/articles/voa/1043276.md)
 
