--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-12 [听政府的还是回家和亲人团聚？打工人两头为难](/articles/voa/1042974.md)
+
 2-12 [缅甸抗议活动持续 军方拘押更多政府官员](/articles/voa/1042975.md)
 
 2-12 [人脸识别把人变成“透明人” 中共极权监控下人人自危](/articles/voa/1042976.md)
@@ -598,6 +600,4 @@
 2-2 [美官员:中国通过监禁维吾尔活动人士在新疆的亲属来报复他们](/articles/voa/1043272.md)
 
 2-2 [黑人维权组织将继续巩固基层组织施压拜登政府](/articles/voa/1043273.md)
-
-2-2 [缅甸政变 拜登面临首个外交挑战](/articles/voa/1043274.md)
 
