--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-12 [德國理髮師苦盼開門營業](/articles/dw/1043935.md)
+
 2-12 [巴西卫生部长：亚马逊变种传染力强三倍](/articles/dw/1043936.md)
 
 2-12 [英国经济去年严重萎缩](/articles/dw/1043937.md)
@@ -598,6 +600,4 @@
 1-26 [德语媒体：习先生的文字游戏](/articles/dw/1044233.md)
 
 1-26 [柏林撑港“口惠实不至”？活动人士呼吁改变](/articles/dw/1044234.md)
-
-1-26 [香港警方获取被拘民主人士银行记录](/articles/dw/1044235.md)
 
