--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-12 [网民罢看央视春晚 批评官方宣传全面左转](/articles/rfa/1046418.md)
+
+2-12 [大陆历史漫画进台湾校园  被指向学生洗脑](/articles/rfa/1046419.md)
+
 2-12 [缅甸民众持续抗议示威     美国制裁缅甸军政府](/articles/rfa/1046420.md)
 
 2-12 [美媒曝腾讯高管涉泄微信数据而被拘](/articles/rfa/1046421.md)
@@ -596,8 +600,4 @@
 1-12 [英国严禁新疆强迫劳动制品进口 学者呼吁国际联合行动](/articles/rfa/1046716.md)
 
 1-12 [卢思位听证会举行前夕  律师余文生妻子遭国保上门辱骂](/articles/rfa/1046717.md)
-
-1-12 [美台交流限制取消 美国务院官员立马会见台湾外交官](/articles/rfa/1046718.md)
-
-1-12 [疫情重临中国    多省破天荒无限期押后两会](/articles/rfa/1046719.md)
 
