--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-13 [车用芯片短缺继续，白宫正尽力解决](/articles/voa/1042968.md)
+
+2-13 [缅甸民众继续抗议军政府 UN人权理事会特别会议讨论缅甸危机](/articles/voa/1042969.md)
+
 2-12 [湄公河水位降令人担忧 湄委会呼吁中国分享大坝数据](/articles/voa/1042970.md)
 
 2-12 [央视春晚出现“涂黑脸”表演 引发种族歧视争议](/articles/voa/1042971.md)
@@ -596,8 +600,4 @@
 2-2 [缅甸全国民主联盟敦促军方释放昂山素季等官员](/articles/voa/1043266.md)
 
 2-2 [郭飞雄事件被指凸显人权法治倒退 家人盼美国援救](/articles/voa/1043267.md)
-
-2-2 [美国反情报收集中心报告：中国大量收集美国个人医疗数据威胁国家安全](/articles/voa/1043268.md)
-
-2-2 [中国高官演讲吁美中重回合作互赢 美学者：老生常谈无新意](/articles/voa/1043269.md)
 
