--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-13 [因欧洲跨境电视协议CGTN面临在整片欧陆掉线](/articles/rfi/1034822.md)
+
+2-13 [森喜朗辞职 震撼东京奥运会](/articles/rfi/1034823.md)
+
+2-13 [墨尔本突封城 澳网比赛不开放球迷进场 – 法国国际广播电台 - RFI](/articles/rfi/1034824.md)
+
 2-13 [贫困青海女贪官收贿无极限！买房藏赃物堆满金条](/articles/rfi/1034825.md)
 
 2-13 [日媒指新英日同盟成型 中国难进CPTPP](/articles/rfi/1034826.md)
@@ -594,10 +600,4 @@
 2-7 [日美澳印就举行线上首脑会议展开协调](/articles/rfi/1035120.md)
 
 2-7 [港府再收强检门坎至1宗确诊 封区逾万人受检仅有一例 评论指变相全民强检](/articles/rfi/1035121.md)
-
-2-7 [求神科佛也因疫情改网播 黄大仙「头灶香」近百年首度取消 观音借库看FB](/articles/rfi/1035122.md)
-
-2-7 [中国3天批第二款国产疫苗上市 澳门下周二接种首种国产疫苗 港人继续等](/articles/rfi/1035123.md)
-
-2-7 [拜登寻地气亲民 与加州失业妇女通电话](/articles/rfi/1035124.md)
 
