--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-13 [【网络民议】武汉市民除夕凌晨上街买花](/articles/cdt/385966.md)
+
 2-12 [BBC｜BBC对中国全面禁播其世界新闻台表示“失望”](/articles/cdt/385971.md)
 
 2-12 [德国之声｜腾讯地震 高管涉嫌腐败遭调查](/articles/cdt/385972.md)
@@ -598,6 +600,4 @@
 1-13 [【CDT连载】巴奴的救赎（23）](/articles/cdt/387115.md)
 
 1-13 [经济观察报书评 | 为什么华人不在乎“政治正确”：华人的种族观念与族群认同](/articles/cdt/387116.md)
-
-1-13 [偶尔治愈 | 确诊患者个人信息又被泄露，对话被网暴的石家庄患者](/articles/cdt/387118.md)
 
