--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-13 [塞尔维亚中俄欧三管齐下疫苗推进迅速 拿到俄疫苗首个生产许可](/articles/rfi/1034819.md)
+
+2-13 [彭博社：中国通过科技供应商收集情报成为全球供应链广泛风险](/articles/rfi/1034820.md)
+
 2-13 [世卫：仍不排除新冠起源的所有可能性](/articles/rfi/1034821.md)
 
 2-13 [因欧洲跨境电视协议CGTN面临在整片欧陆掉线](/articles/rfi/1034822.md)
@@ -596,8 +600,4 @@
 2-7 [布林肯杨洁篪首度通话 中美两国公布内容不同或各取所需](/articles/rfi/1035117.md)
 
 2-7 [香港网络电台主持人杰斯再遭拘](/articles/rfi/1035118.md)
-
-2-7 [习近平贵州视察特种机登运-8G](/articles/rfi/1035119.md)
-
-2-7 [日美澳印就举行线上首脑会议展开协调](/articles/rfi/1035120.md)
 
