--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-13 [美科技和商界团体推动积极数字政策  应对中国挑战](/articles/rfa/1046412.md)
+
+2-13 [中国禁止进口意大利猪肉  称可能传播新冠病毒惹争议](/articles/rfa/1046413.md)
+
 2-13 [拜登松绑孔子学院、Tiktok和微信?   未必如此](/articles/rfa/1046414.md)
 
 2-13 [加拿大成港人移居首选  去年签证申请大增20%](/articles/rfa/1046415.md)
@@ -596,8 +600,4 @@
 1-13 [中国在非洲推广疫苗外交  被批口惠而实不至](/articles/rfa/1046710.md)
 
 1-13 [民运人士丁建强追悼会在洛杉矶举行](/articles/rfa/1046711.md)
-
-1-13 [至少15名香港抗争者已成功获得加拿大庇护](/articles/rfa/1046712.md)
-
-1-13 [世卫专家团本周抵武汉调查   中国大量病毒资料突然消失](/articles/rfa/1046713.md)
 
