--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-13 [美国总统和第一夫人发表视频祝贺农历新年(全文翻译)](/articles/voa/1042964.md)
+
 2-13 [香港仅余民意代表 区议员：港府行政手段打压区议会](/articles/voa/1042965.md)
 
 2-13 [英中媒体战蔓延，环球电视网被德国禁播](/articles/voa/1042966.md)
@@ -598,6 +600,4 @@
 2-3 [李柱铭获诺贝尔和平奖提名，挪威议员：他激励了香港民主运动](/articles/voa/1043262.md)
 
 2-3 [中国管控互联网舆论再收紧 自媒体禁发政军经信息](/articles/voa/1043263.md)
-
-2-3 [缅甸政变面临国际制裁 对北京是喜还是忧？](/articles/voa/1043264.md)
 
