--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-13 [为阻止孟晚舟被引渡到美国，华为将汇丰银行告上英国法庭](/articles/voa/1042956.md)
+
+2-13 [墨西哥总统支持拜登停建美墨边境墙的决定](/articles/voa/1042957.md)
+
 2-13 [弹劾案辩方：特朗普没有煽动发生在国会大厦的骚乱](/articles/voa/1042958.md)
 
 2-13 [彭博社：中国利用供应链对美国进行间谍活动](/articles/voa/1042959.md)
@@ -596,8 +600,4 @@
 2-3 [谣言和阴谋论充斥 脆弱的中文信息圈进一步陷入窘境](/articles/voa/1043254.md)
 
 2-3 [美参议院批准布蒂吉格出任运输部长](/articles/voa/1043255.md)
-
-2-3 [要求澄清华为问题立场 共和党众议员呼吁暂缓确认商务部长](/articles/voa/1043256.md)
-
-2-3 [时事大家谈: 美国的对华战略核心—习近平？](/articles/voa/1043257.md)
 
