--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-13 [赴德就医一个月 阿尔及利亚总统返国 – 法国国际广播电台 - RFI](/articles/rfi/1034805.md)
+
 2-13 [疫苗计画没正式上路自己就先打 秘鲁前总统挨轰 – 法国国际广播电台 - RFI](/articles/rfi/1034806.md)
 
 2-13 [有国会山庄之乱先例 多方呼吁脸书续禁川普 – 法国国际广播电台 - RFI](/articles/rfi/1034807.md)
@@ -598,6 +600,4 @@
 2-7 [乔科维奇谈澳网像「恋爱」 至今上场仍会紧张 – 法国国际广播电台 - RFI](/articles/rfi/1035103.md)
 
 2-7 [受背伤所苦 纳达尔：不保证能打澳网 – 法国国际广播电台 - RFI](/articles/rfi/1035104.md)
-
-2-7 [缅甸断网仍爆示威潮 传网路连线已部分恢复 – 法国国际广播电台 - RFI](/articles/rfi/1035105.md)
 
