--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-13 [橙雨伞 | 没想到这次连男性也被羞辱了](/articles/cdt/385958.md)
+
 2-13 [【网络民议】武汉市民除夕凌晨上街买花](/articles/cdt/385966.md)
 
 2-12 [BBC｜BBC对中国全面禁播其世界新闻台表示“失望”](/articles/cdt/385971.md)
@@ -598,6 +600,4 @@
 1-13 [【CDTV】袁腾飞｜警惕：阴魂不散拳乱复生！](/articles/cdt/387114.md)
 
 1-13 [【CDT连载】巴奴的救赎（23）](/articles/cdt/387115.md)
-
-1-13 [经济观察报书评 | 为什么华人不在乎“政治正确”：华人的种族观念与族群认同](/articles/cdt/387116.md)
 
