--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-13 [路透调查：美国复苏步入正轨 就业增长尚需时日](/articles/voa/1042954.md)
+
 2-13 [冲击美国国会大厦的骚乱者都是些什么样的人？](/articles/voa/1042955.md)
 
 2-13 [为阻止孟晚舟被引渡到美国，华为将汇丰银行告上英国法庭](/articles/voa/1042956.md)
@@ -598,6 +600,4 @@
 2-3 [美国将推家用新冠检测产品 多地疫苗接种进入第二阶段](/articles/voa/1043252.md)
 
 2-3 [拜登推翻特朗普移民政策 共和党议员称将导致边境“灾难”](/articles/voa/1043253.md)
-
-2-3 [谣言和阴谋论充斥 脆弱的中文信息圈进一步陷入窘境](/articles/voa/1043254.md)
 
