--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-13 [DW事实核查：是否有人因接种新冠疫苗而死亡？](/articles/dw/1043927.md)
+
 2-13 [失去英国 失去欧洲：CGTN在德国也遭停播](/articles/dw/1043928.md)
 
 2-12 [西巴尔干的疫苗接种：在无能与地缘政治之间](/articles/dw/1043929.md)
@@ -598,6 +600,4 @@
 1-27 [专访：德国卫生部长新冠抗疫一年谈](/articles/dw/1044225.md)
 
 1-27 [纪录片回顾新冠疫情始末 指控北京延误公开真相](/articles/dw/1044226.md)
-
-1-27 [拜登普京首次通话 同意延长军控条约](/articles/dw/1044227.md)
 
