--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-13 [【网络民议】网传北京某老师要求学生共享手机屏幕，检查“不良应用”](/articles/cdt/385950.md)
+
 2-13 [德国之声 | 长平观察：真相比平反更重要](/articles/cdt/385952.md)
 
 2-13 [端传媒 | 疫后春晚：一场关于扶贫与大国梦的空洞喧嚣（节选）](/articles/cdt/385954.md)
@@ -598,6 +600,4 @@
 1-13 [中国新闻周刊｜石家庄封城，滞留大学生遭遇“回家”困境](/articles/cdt/387108.md)
 
 1-13 [土家野夫｜平生无负是书商 ——悼沈公昌文先生](/articles/cdt/387110.md)
-
-1-13 [法广｜被关押三年后返回法国的维族女子首次公开露面作证](/articles/cdt/387112.md)
 
