--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-13 [美前驻联合国大使黑利与特朗普割席](/articles/dw/1043925.md)
+
+2-13 [行骗纽约上流圈 德国假名媛获释](/articles/dw/1043926.md)
+
 2-13 [DW事实核查：是否有人因接种新冠疫苗而死亡？](/articles/dw/1043927.md)
 
 2-13 [失去英国 失去欧洲：CGTN在德国也遭停播](/articles/dw/1043928.md)
@@ -596,8 +600,4 @@
 1-27 [中国核酸检测采用肛拭子 网民表示不能淡定](/articles/dw/1044223.md)
 
 1-27 [特朗普弹劾案在美国参议院遇阻](/articles/dw/1044224.md)
-
-1-27 [专访：德国卫生部长新冠抗疫一年谈](/articles/dw/1044225.md)
-
-1-27 [纪录片回顾新冠疫情始末 指控北京延误公开真相](/articles/dw/1044226.md)
 
