--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-13 [香港随北京禁BBC 德国跟英国后下架央视国际](/articles/rfi/1034778.md)
+
+2-13 [美国参议院今续审判特朗普 律师斥泄愤违宪 脸书广询是否永禁特朗普](/articles/rfi/1034779.md)
+
+2-13 [古巴关达那摩湾监狱 拜登盼任内能关闭 – 法国国际广播电台 - RFI](/articles/rfi/1034780.md)
+
+2-13 [伊朗总统示警：国内将出现第4波COVID-19疫情 – 法国国际广播电台 - RFI](/articles/rfi/1034781.md)
+
 2-13 [希腊好手西西帕斯直落3 晋级澳网男单16强 – 法国国际广播电台 - RFI](/articles/rfi/1034782.md)
 
 2-13 [俄罗斯好手梅迪维夫鏖战5盘 晋级澳网男单16强 – 法国国际广播电台 - RFI](/articles/rfi/1034783.md)
@@ -592,12 +600,4 @@
 2-8 [厄瓜多大选 左派总统接班人出口民调领先 – 法国国际广播电台 - RFI](/articles/rfi/1035076.md)
 
 2-8 [火星再添访客 阿联希望号探测器9日登陆 – 法国国际广播电台 - RFI](/articles/rfi/1035077.md)
-
-2-8 [伊布生涯第500个俱乐部进球 A米夺回义甲龙头 – 法国国际广播电台 - RFI](/articles/rfi/1035078.md)
-
-2-8 [叶伦：拜登54兆纾困案加持 美就业市场明年恢复 – 法国国际广播电台 - RFI](/articles/rfi/1035079.md)
-
-2-8 [海盗超级杯退酋长夺冠 布雷迪压马霍姆斯获MVP – 法国国际广播电台 - RFI](/articles/rfi/1035080.md)
-
-2-8 [澳网女单首轮 大&amp;#22338;直美霸气晋级 – 法国国际广播电台 - RFI](/articles/rfi/1035081.md)
 
