--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-13 [哎呀音乐｜被称为中国第一首贺岁歌的《恭喜恭喜》，你真的听懂了吗？](/articles/cdt/385939.md)
+
 2-13 [【异闻观止】人民日报：“春晚的总体美誉度达96.17%”](/articles/cdt/385941.md)
 
 2-13 [冰川思享号｜侯虹斌 ：春晚一股浓浓的“爹”味，我尴尬症都犯了！](/articles/cdt/385947.md)
@@ -598,6 +600,4 @@
 1-14 [行走吃瓜圈 | 重磅爆料，我在拼多多的三年](/articles/cdt/387103.md)
 
 1-14 [财经杂志 | 被算法监控的打工人：有人去洗手间超时3秒扣工资，上班买饭被扣误工费](/articles/cdt/387104.md)
-
-1-14 [时尚先生 | 拼多多员工自杀背后：什么在逼迫年轻人至死方休？](/articles/cdt/387105.md)
 
