--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-13 [欧盟要求中国收回对BBC的禁令，称其违反中国宪法和世界人权宣言](/articles/voa/1042952.md)
+
 2-13 [美国称朝鲜是当务之急](/articles/voa/1042953.md)
 
 2-13 [路透调查：美国复苏步入正轨 就业增长尚需时日](/articles/voa/1042954.md)
@@ -598,6 +600,4 @@
 2-3 [缅甸政变让拜登面临外交挑战](/articles/voa/1043250.md)
 
 2-3 [俄罗斯法庭判处纳瓦尔尼三年半监禁](/articles/voa/1043251.md)
-
-2-3 [美国将推家用新冠检测产品 多地疫苗接种进入第二阶段](/articles/voa/1043252.md)
 
