--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-14 [时事大家谈：中国多地疫情反弹 就地过年还是回家团圆？](/articles/voa/1042950.md)
+
+2-14 [冠病溯源调查帮中国甩锅？WHO被指自损公信力](/articles/voa/1042951.md)
+
 2-13 [欧盟要求中国收回对BBC的禁令，称其违反中国宪法和世界人权宣言](/articles/voa/1042952.md)
 
 2-13 [美国称朝鲜是当务之急](/articles/voa/1042953.md)
@@ -596,8 +600,4 @@
 2-3 [VOA连线(张蓉湘): 缅甸政变 军方可能面临制裁](/articles/voa/1043248.md)
 
 2-3 [哥大法学院以美国首位华人律师张康仁命名中国法律研究中心](/articles/voa/1043249.md)
-
-2-3 [缅甸政变让拜登面临外交挑战](/articles/voa/1043250.md)
-
-2-3 [俄罗斯法庭判处纳瓦尔尼三年半监禁](/articles/voa/1043251.md)
 
